<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="CroupierChallenge"
              android:textAlignment="center"
              android:textSize="24sp"
              android:textStyle="bold"
              android:id="@+id/textView"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent"/>


    <EditText android:layout_width="match_parent"
              android:layout_height="40dp"
              android:id="@+id/emailField"
              android:hint="@string/email"
              android:maxLines="1"
              android:inputType="textEmailAddress"
              android:padding="8dp"
              android:background="@drawable/rounded_shape"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"
              android:layout_marginTop="220dp"
              app:layout_constraintTop_toBottomOf="@+id/textView"
              app:layout_constraintHorizontal_bias="0.0"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="40dp"
              android:padding="8dp"
              android:id="@+id/passwordField"
              android:hint="@string/password"
              android:maxLines="1"
              android:inputType="textPassword"
              android:background="@drawable/rounded_shape"
              android:layout_marginTop="16dp"
              app:layout_constraintTop_toBottomOf="@id/emailField"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordField"
            android:text="@string/log_in"
            android:id="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="144dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_user"
            android:id="@+id/createUserBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"/>



</android.support.constraint.ConstraintLayout>